PyMaker/datas/object2/RawHTML/i2101/Python_DOC_referPages.importing-the-blpapi-package-is-giving-syntaxerror.txt
<div class="post-text" itemprop="text">
<p>Before I begin, I'd like to preface that I'm relatively new to python, and haven't had to use it much before this little project of mine. I'm trying to make a twitter bot as part of an art project, and I can't seem to get tweepy to import. I'm using macOS High Sierra and Python 3.7. I first installed tweepy by using </p>
<pre><code>pip3 install tweepy
</code></pre>
<p>and this appeared to work, as I'm able to find the tweepy files in finder. However, when I simply input </p>
<pre><code>import tweepy
</code></pre>
<p>into the IDLE, I get this error:</p>
<pre><code>Traceback (most recent call last):
File "/Users/jacobhill/Documents/CicadaCacophony.py", line 1, in &lt;module&gt;
  import tweepy
File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/tweepy/__init__.py", line 17, in &lt;module&gt;
  from tweepy.streaming import Stream, StreamListener
File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/tweepy/streaming.py", line 358
  def _start(self, async):
                         ^
SyntaxError: invalid syntax
</code></pre>
<p>Any idea on how to remedy this? I've looked at other posts on here and the other errors seem to be along the lines of "tweepy module not found", so I don't know what to do with my error. Thanks!</p>
</div>
<div class="post-text" itemprop="text">
<p>Using <code>async</code> as an identifier <a href="https://www.python.org/dev/peps/pep-0492/#deprecation-plans" rel="nofollow noreferrer">has been deprecated since Python 3.5, and became an error in Python 3.7</a>, because it's a keyword.</p>
<p>This Tweepy bug was <a href="https://github.com/tweepy/tweepy/issues/1017" rel="nofollow noreferrer">reported on 16 Mar</a>, and <a href="https://github.com/tweepy/tweepy/pull/1042" rel="nofollow noreferrer">fixed on 12 May</a>, but <a href="https://github.com/tweepy/tweepy/issues/1063" rel="nofollow noreferrer">there hasn't been a new release yet</a>. Which is why, as <a href="https://github.com/tweepy/tweepy" rel="nofollow noreferrer">the repo's main page says</a>:</p>
<blockquote>
<p>Python 2.7, 3.4, 3.5 &amp; 3.6 are supported.</p>
</blockquote>
<hr/>
<p>For the time being, you can install the development version:</p>
<pre><code>pip3 install git+https://github.com/tweepy/tweepy.git
</code></pre>
<p>Or, since you've already installed an earlier version:</p>
<pre><code>pip3 install --upgrade git+https://github.com/tweepy/tweepy.git
</code></pre>
<hr/>
<p>You could also follow the instructions from the repo:</p>
<pre><code>git clone https://github.com/tweepy/tweepy.git
cd tweepy
python3 setup.py install
</code></pre>
<p>However, this will mean <code>pip</code> may not fully understand what you've installed.</p>
</div>
<div class="post-text" itemprop="text">
<p>In Python3.7, <a href="https://docs.python.org/3/reference/compound_stmts.html#async" rel="nofollow noreferrer"><code>async</code></a> became a reserved word (as can be seen in <em>whats new</em> section <a href="https://docs.python.org/3/whatsnew/3.7.html" rel="nofollow noreferrer">here</a>) and therefore cannot be used as argument. This is why this <code>Syntax Error</code> is raised. </p>
<p>That said, and following <code>tweetpy</code>s official GitHub (<a href="https://github.com/tweepy/tweepy" rel="nofollow noreferrer">here</a>), only</p>
<blockquote>
<p>Python 2.7, 3.4, 3.5 &amp; 3.6 are supported.</p>
</blockquote>
<hr/>
<p>However, if you really must use Python3.7, there is a workaround. Following <a href="https://github.com/tweepy/tweepy/issues/1017" rel="nofollow noreferrer">this</a> suggestion, you can</p>
<blockquote>
<p>open streaming.py and replace <code>async</code> with <code>async_</code></p>
</blockquote>
<p>and it should work</p>
</div>
<span class="comment-copy">I don't know why this was downvoted. Given that the bug has been fixed upstream (but not released), I think it's probably better to install from the repo than to fix it locally, but I don't see anything wrong with explaining how to fix it locally…</span>
